--- a/weeb_cli/locales/en.json
+++ b/weeb_cli/locales/en.json
@@ -3,7 +3,8 @@
         "title": "Main Menu",
         "prompt": "What would you like to do?",
         "options": {
-            "hello": "Say Hello",
+            "search": "Search Anime",
+            "watchlist": "My Watchlist",
             "settings": "Settings",
             "exit": "Exit"
         }
@@ -11,8 +12,14 @@
     "settings": {
         "title": "Settings",
         "language": "Change Language",
+        "source": "Select Scraping Source",
+        "aria2": "Aria2 Downloader",
+        "ytdlp": "yt-dlp Downloader",
         "back": "Back to Main Menu",
-        "language_changed": "Language changed to English."
+        "language_changed": "Language changed to English.",
+        "source_changed": "Source changed to {source}.",
+        "toggle_on": "{tool} enabled.",
+        "toggle_off": "{tool} disabled."
     },
     "setup": {
         "welcome": "Welcome to Weeb CLI!",
@@ -30,15 +37,12 @@
         "location": "Tools installed at: {path}",
         "pkg_manager_try": "Trying package manager: {manager}..."
     },
-    "hello": {
-        "greeting": "Hello, World!",
-        "prompt": "What is your name?",
-        "response": "Nice to meet you, {name}!"
-    },
     "common": {
         "error": "Error",
         "processing": "Processing...",
         "continue_key": "Press Enter to continue...",
-        "success": "Goodbye!"
+        "success": "Goodbye!",
+        "enabled": "Enabled",
+        "disabled": "Disabled"
     }
 }
