--- a/weeb_cli/locales/tr.json
+++ b/weeb_cli/locales/tr.json
@@ -3,7 +3,8 @@
         "title": "Ana Menü",
         "prompt": "Ne yapmak istersiniz?",
         "options": {
-            "hello": "Merhaba De",
+            "search": "Anime Ara",
+            "watchlist": "İzlediklerim",
             "settings": "Ayarlar",
             "exit": "Çıkış"
         }
@@ -11,8 +12,14 @@
     "settings": {
         "title": "Ayarlar",
         "language": "Dil Değiştir",
+        "source": "Kaynak Seçimi",
+        "aria2": "Aria2 İndirici",
+        "ytdlp": "yt-dlp İndirici",
         "back": "Ana Menüye Dön",
-        "language_changed": "Dil Türkçe olarak değiştirildi."
+        "language_changed": "Dil Türkçe olarak değiştirildi.",
+        "source_changed": "Kaynak {source} olarak değiştirildi.",
+        "toggle_on": "{tool} aktif edildi.",
+        "toggle_off": "{tool} devre dışı bırakıldı."
     },
     "setup": {
         "welcome": "Weeb CLI'a Hoş Geldiniz!",
@@ -30,15 +37,12 @@
         "location": "Araçlar şuraya kuruldu: {path}",
         "pkg_manager_try": "Paket yöneticisi deneniyor: {manager}..."
     },
-    "hello": {
-        "greeting": "Merhaba, Dünya!",
-        "prompt": "Adınız nedir?",
-        "response": "Tanıştığımıza memnun oldum, {name}!"
-    },
     "common": {
         "error": "Hata",
         "processing": "İşlem yapılıyor...",
         "continue_key": "Devam etmek için Enter'a basın...",
-        "success": "Görüşmek üzere!"
+        "success": "Görüşmek üzere!",
+        "enabled": "Aktif",
+        "disabled": "Pasif"
     }
 }
