feat: ayarlarda alt menüler eklendi (aria2, ytdlp) ve i18n desteği sağlandı

--- a/weeb_cli/locales/en.json
+++ b/weeb_cli/locales/en.json
@@ -14,7 +14,15 @@
         "language": "Change Language",
         "source": "Select Scraping Source",
         "aria2": "Aria2 Downloader",
-        "ytdlp": "yt-dlp Downloader",
+        "ytdlp": "yt-dlp Support",
+        "aria2_config": "Aria2 Settings",
+        "ytdlp_config": "yt-dlp Settings",
+        "max_conn": "Max Connections",
+        "download_dir": "Download Directory",
+        "format": "Format",
+        "enter_conn": "Connections (1-16)",
+        "enter_path": "Download Path",
+        "enter_format": "Format string",
         "language_changed": "Language changed to English.",
         "source_changed": "Source changed to {source}.",
         "toggle_on": "{tool} enabled.",
@@ -56,7 +64,6 @@
         "error": "Search failed."
     },
     "details": {
-        "title": "Anime Details",
         "error_slug": "Error: Invalid anime ID.",
         "not_found": "Details not found.",
         "episode": "Episode",
