--- a/weeb_cli/locales/tr.json
+++ b/weeb_cli/locales/tr.json
@@ -14,7 +14,15 @@
         "language": "Dil Değiştir",
         "source": "Kaynak Seçimi",
         "aria2": "Aria2 İndirici",
-        "ytdlp": "yt-dlp İndirici",
+        "ytdlp": "yt-dlp Desteği",
+        "aria2_config": "Aria2 Ayarları",
+        "ytdlp_config": "yt-dlp Ayarları",
+        "max_conn": "Maksimum Bağlantı",
+        "download_dir": "İndirme Klasörü",
+        "format": "Format",
+        "enter_conn": "Bağlantı Sayısı (1-16)",
+        "enter_path": "İndirme Yolu",
+        "enter_format": "Format yapısı",
         "language_changed": "Dil Türkçe olarak değiştirildi.",
         "source_changed": "Kaynak {source} olarak değiştirildi.",
         "toggle_on": "{tool} aktif edildi.",
@@ -56,7 +64,6 @@
         "error": "Arama başarısız."
     },
     "details": {
-        "title": "Anime Detayı",
         "error_slug": "Hata: Geçersiz anime ID.",
         "not_found": "Detaylar bulunamadı.",
         "episode": "Bölüm",
