feat: otomatik güncelleme kontrolü ve exe ikonu eklendi

--- a/weeb_cli/locales/en.json
+++ b/weeb_cli/locales/en.json
@@ -1,4 +1,11 @@
 {
+    "update": {
+        "available": "New Update Available!",
+        "current": "Current Version",
+        "prompt": "Would you like to update now?",
+        "opening": "Opening download page in browser...",
+        "error": "Could not find download URL."
+    },
     "menu": {
         "title": "Main Menu",
         "prompt": "What would you like to do?",
