--- a/weeb_cli/locales/en.json
+++ b/weeb_cli/locales/en.json
@@ -30,6 +30,7 @@
         "source": "Select Scraping Source",
         "aria2": "Aria2 Downloader",
         "ytdlp": "yt-dlp Support",
+        "show_description": "Show Description",
         "aria2_config": "Aria2 Settings",
         "ytdlp_config": "yt-dlp Settings",
         "max_conn": "Max Connections",
@@ -107,7 +108,6 @@
         "player_starting": "Starting Player...",
         "stream_not_found": "No stream URL found.",
         "select_source": "Select Source:",
-        "show_description": "📖 Show/Hide Description",
         "invalid_ep_id": "Invalid Episode ID.",
         "download_wip": "Download feature coming soon...",
         "queueing": "Queueing {count} episodes... (Coming Soon)"
