--- a/weeb_cli/locales/en.json
+++ b/weeb_cli/locales/en.json
@@ -180,6 +180,7 @@
         "manage_queue": "Queue Management",
         "select_anime": "Select Anime",
         "search_library": "Search",
+        "search_anime": "Search or select anime",
         "drive_not_connected": "Drive not connected",
         "connect_drive": "Connect {name} drive",
         "notification_title": "Weeb CLI",
