--- a/weeb_cli/locales/tr.json
+++ b/weeb_cli/locales/tr.json
@@ -180,6 +180,7 @@
         "manage_queue": "Kuyruk Yönetimi",
         "select_anime": "Anime Seçin",
         "search_library": "Ara",
+        "search_anime": "Anime ara veya sec",
         "drive_not_connected": "Disk bağlı değil",
         "connect_drive": "{name} diskini bağlayın",
         "notification_title": "Weeb CLI",
