indirmeler: anime indexleme, tum dizinlerde arama, cevrimdisi gosterim

--- a/weeb_cli/locales/en.json
+++ b/weeb_cli/locales/en.json
@@ -181,6 +181,12 @@
         "select_anime": "Select Anime",
         "search_library": "Search",
         "search_anime": "Search or select anime",
+        "search_all": "Search All Sources",
+        "offline": "Offline",
+        "reindex": "Reindex",
+        "indexing": "Indexing...",
+        "indexed": "{count} anime indexed",
+        "no_indexed": "No indexed anime. Connect a drive and index first.",
         "drive_not_connected": "Drive not connected",
         "connect_drive": "Connect {name} drive",
         "notification_title": "Weeb CLI",
