--- a/weeb_cli/locales/tr.json
+++ b/weeb_cli/locales/tr.json
@@ -181,6 +181,12 @@
         "select_anime": "Anime Seçin",
         "search_library": "Ara",
         "search_anime": "Anime ara veya sec",
+        "search_all": "Tum Dizinlerde Ara",
+        "offline": "Cevrimdisi",
+        "reindex": "Yeniden Indexle",
+        "indexing": "Indexleniyor...",
+        "indexed": "{count} anime indexlendi",
+        "no_indexed": "Indexlenmis anime yok. Once bir disk baglayip indexleyin.",
         "drive_not_connected": "Disk bağlı değil",
         "connect_drive": "{name} diskini bağlayın",
         "notification_title": "Weeb CLI",
