ep kisaltmasi i18n destegi

--- a/weeb_cli/locales/en.json
+++ b/weeb_cli/locales/en.json
@@ -190,6 +190,7 @@
         "drive_not_connected": "Drive not connected",
         "connect_drive": "Connect {name} drive",
         "notification_title": "Weeb CLI",
-        "notification_complete": "{anime} - Episode {episode} downloaded"
+        "notification_complete": "{anime} - Episode {episode} downloaded",
+        "episode_short": "Ep"
     }
 }
