--- a/weeb_cli/locales/en.json
+++ b/weeb_cli/locales/en.json
@@ -26,6 +26,7 @@
     },
     "settings": {
         "title": "Settings",
+        "trackers": "MyAnimeList & AniList",
         "language": "Change Language",
         "source": "Select Scraping Source",
         "aria2": "Aria2 Downloader",
