--- a/weeb_cli/locales/en.json
+++ b/weeb_cli/locales/en.json
@@ -33,6 +33,8 @@
         "aria2": "Aria2 Downloader",
         "ytdlp": "yt-dlp Support",
         "show_description": "Show Description",
+        "discord_rpc": "Discord RPC",
+        "discord_rpc_install_required": "pypresence library is required for Discord RPC.",
         "aria2_config": "Aria2 Settings",
         "ytdlp_config": "yt-dlp Settings",
         "max_conn": "Max Connections",
